--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/lookin%20for%20diamonds.html" />
+    <meta http-equiv="refresh" content="0; url=lookin%20for%20diamonds.html" />
   </head>
   <body>
-    <p><a href="/lookin%20for%20diamonds.html">Redirect</a></p>
+    <p><a href="lookin%20for%20diamonds.html">Redirect</a></p>
   </body>
 </html>
